--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -5,6 +5,8 @@
 {{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
 {{ .Hugo.Generator }}
 
+<link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.png">
+
 <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo.png">
 {{ with .RSSLink }}<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ . }}">{{ end }}
 
