--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -47,7 +47,6 @@ ul, ol {
   margin: 0;
   padding: 0;
   line-height: 1.5rem;
-  padding-left: 1.5rem;
 }
 
 table {
@@ -313,16 +312,19 @@ article.sn > .article-body {
 }
 
 article.sn > .article-body h2 {
-  border-bottom: .25rem solid #333;
+  border-bottom: .25rem solid #2196F3;
   font-size: 1.2rem;
   line-height: 1.5rem;
+  color: #555;
   margin: 1.5rem 0;
   padding: .5rem 0;
+  padding-left: .5rem;
 }
 
 article.sn > .article-body h3 {
-  border-left: .5rem solid #333;
+  border-left: .5rem solid #2196F3;
   line-height: 1.5rem;
+  color: #555;
   margin: 1.5rem 0;
   padding: .125rem .5rem;
 }
