--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -28,7 +28,7 @@
       <header>{{ $key | upper }}</header>
       <div>
         <ul class="terms">
-          {{ range first 10 $value.ByCount }}<li><a href="{{ $.Site.BaseURL}}{{ $key }}/{{ .Name | urlize }}">{{ .Name | upper }}</a></li>{{ end }}
+          {{ range first 10 $value.ByCount }}<li><a href="{{ $.Site.BaseURL}}{{ $key }}/{{ .Name | urlize }}">{{ .Name }}</a></li>{{ end }}
         </ul>
       </div>
     </section>
