--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -97,10 +97,6 @@ aside.f {
   margin: 0 0 1rem 0;
 }
 
-.l-header a {
-  
-}
-
 .l-footer {
   background-color: #2196F3;
   box-shadow: 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px rgba(63,63,68,.1), 0 1px 2px rgba(0,0,0,.05);
@@ -108,8 +104,6 @@ aside.f {
   font-weight: 400;
   padding: 1rem 0;
 }
-
-
 
 @media (max-width: 768px) {
   .l-sidebar {
@@ -405,7 +399,7 @@ article.sn > .article-body p code {
 
 article.sn > .article-body blockquote {
   position: relative;
-  border-left: .25rem solid #333;
+  border-left: .25rem solid #2196F3;
   font-size: .8rem;
   padding: .125rem 1rem;
   margin: 1.5rem 0;
@@ -563,11 +557,13 @@ section.footer > header a {
   display: block;
   border-bottom: .25rem solid #ee6e73;
   width: 10rem;
-  margin: 1.5rem auto;
+  margin: 1rem auto;
+  margin-bottom: 2rem;
 }
 
 .page-title > .title {
   font-size: 1.2rem;
+  color: #555;
   line-height: 1.5rem;
 }
 
