--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -8,16 +8,18 @@
       <h1 class="title">{{ .Title }}</h1>
     </header>
 
-    <ul class="p-terms">
-      {{ $data := .Data }}
-      {{ range $key, $value := .Data.Terms }}
-      <li>
-        <h2 class="terms-title">
-          <a href="{{ $.Site.BaseURL }}{{ $data.Plural }}/{{ $key | urlize }}">{{ $key }}</a> ({{ len $value }})
-        </h2>
-      </li>
-      {{ end }}
-    </ul>
+    <div class="l-container">
+      <ul class="p-terms">
+        {{ $data := .Data }}
+        {{ range $key, $value := .Data.Terms }}
+        <li>
+          <h2 class="terms-title">
+            <a href="{{ $.Site.BaseURL }}{{ $data.Plural }}/{{ $key | urlize }}">{{ $key }}</a> ({{ len $value }})
+          </h2>
+        </li>
+        {{ end }}
+      </ul>
+    </div>
 
     {{ partial "pagination.html" . }}
   </div>
