--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -50,16 +50,25 @@ ul, ol {
 }
 
 table {
-  border-collapse: collapse;
+    border-collapse: collapse;
+    text-align: left;
+    line-height: 1.5;
 }
 
-th, td {
-  font-size: .8rem;
-  padding: .5rem;
+th {
+    padding: 10px;
+    font-size: .8rem;
+    font-weight: bold;
+    vertical-align: top;
+    border: 1px solid #ccc;
+    background: #eee;
 }
 
-tr {
-  border-bottom: 1px dashed #ddd;
+td {
+    padding: 10px;
+    font-size: .8rem;
+    vertical-align: top;
+    border: 1px solid #ccc;
 }
 
 /* Layouts */
@@ -350,11 +359,11 @@ article.sn > .article-body em {
 }
 
 article.sn > .article-body strong {
-  box-shadow: 0 -.5rem 0 0 #ffc107 inset;
+  color: #ee6e73;
 }
 
 article.sn > .article-body em {
-  color: #8bc34a;
+  color: #ee6e73;
 }
 
 article.sn > .article-body code,
@@ -425,6 +434,7 @@ article.sn > .article-body figure amp-img {
   border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   max-width: 100%;
+  height: auto;
 }
 
 article.sn > .article-body figcaption {
