add table scroll

--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -50,9 +50,11 @@ ul, ol {
 }
 
 table {
+    display:block;
     border-collapse: collapse;
     text-align: left;
     line-height: 1.5;
+    overflow: auto;
 }
 
 th {
