--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -50,25 +50,23 @@ ul, ol {
 }
 
 table {
-    display:block;
-    border-collapse: collapse;
-    text-align: left;
-    line-height: 1.5;
-    overflow: auto;
+  display:block;
+  border-collapse: collapse;
+  text-align: left;
+  line-height: 1.5;
+  overflow: auto;
+}
+
+th, td {
+  padding: 10px;
+  font-size: .8rem;
+  border: 1px solid #ccc;
+  white-space: nowrap;
 }
 
 th {
-    padding: 10px;
-    font-size: .8rem;
-    font-weight: bold;
-    border: 1px solid #ccc;
-    background: #eee;
-}
-
-td {
-    padding: 10px;
-    font-size: .8rem;
-    border: 1px solid #ccc;
+  font-weight: bold;
+  background: #eee;
 }
 
 /* Layouts */
