thumbnail position fix

--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -709,6 +709,7 @@ section.footer > header a {
 .thumb {
   background-image: url({{ .Site.BaseURL }}images/material.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 {{ range $p := .Site.Pages }}
