--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
     {{ end }}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/solarized_dark.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ $.Site.BaseURL }}css/lightbox.css">
+    <link href="{{ $.Site.BaseURL }}css/lightbox.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="{{ $.Site.BaseURL }}js/lightbox.min.js"></script>
     <title>{{ block "title" . }}{{ end }}{{ .Site.Title }}</title>
