--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -56,6 +56,9 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <script src="//sdk.push7.jp/v2/p7sdk.js"></script>
+    <script>p7.init("b323c4b46031438c9d3c89fa32815ee9");</script>
   </body>
 </html>
 
