--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,23 +2,19 @@
 <html>
   <head>
     {{ partial "meta.html" . }}
-    {{ with .Site.Params.googlefonts }}
-    <link href="{{ . }}" rel="stylesheet">
-    {{ else }}
+
     <link href="//fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    {{ end }}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/solarized_dark.min.css" rel="stylesheet">
     <link href="{{ $.Site.BaseURL }}css/lightbox.css" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="{{ $.Site.BaseURL }}js/lightbox.min.js"></script>
+
     <title>{{ block "title" . }}{{ end }}{{ .Site.Title }}</title>
-    {{ if .IsHome }}<meta name="description" content="{{ .Site.Params.description }}">{{ end }}
     {{ block "meta" . }}{{ end }}
     <style>
       {{ replaceRE " +" " " (replaceRE "\n" "" (partial "styles.css" .)) | safeCSS }}
-      {{ with .Site.Params.fontfamily }} body { font-family: {{ . | safeCSS }}; } {{ end }}
-      {{ with .Site.Params.logofontfamily }} .h-logo { font-family: {{ . | safeCSS }}; } {{ end }}
     </style>
   </head>
 
@@ -57,8 +53,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
-    <script src="//sdk.push7.jp/v2/p7sdk.js"></script>
-    <script>p7.init("b323c4b46031438c9d3c89fa32815ee9");</script>
+    <script src="https://sdk.push7.jp/v2/p7sdk.js"></script>
+    <script>p7.init("{{ .Site.Params.push7AppNo }}");</script>
   </body>
 </html>
-
