change font color

--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -372,7 +372,7 @@ article.sn > .article-body pre {
 
 article.sn > .article-body pre {
   background-color: #333;
-  color: #fff;
+  color: #ee6e73;
   line-height: 1rem;
   margin: 1.5rem -2rem;
   overflow: auto;
