--- a/layouts/partials/single_meta.html
+++ b/layouts/partials/single_meta.html
@@ -3,7 +3,7 @@
 <meta property="og:title" content="{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}">
 <meta property="og:type" content="article">
 <meta property="og:url" content="{{ .Permalink }}">
-<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/material.png" }}">
+<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
 <meta property="og:site_name" content="{{ .Site.Title }}">
 <meta property="og:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ replaceRE "\n" "" (.Description | default .Summary) }}{{ end }}">
 <meta property="og:locale" content="ja_JP">
@@ -13,4 +13,4 @@
 <meta name="twitter:url" content="{{ .Permalink }}">
 <meta name="twitter:title" content="{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}">
 <meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ replaceRE "\n" "" (.Description | default .Summary) }}{{ end }}">
-<meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/material.png" }}">
+<meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
