--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -6,9 +6,7 @@
 {{ .Hugo.Generator }}
 
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.png">
-
-<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo.png">
+<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}favicon.png">
 {{ with .RSSLink }}<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ . }}">{{ end }}
 
 <link rel="canonical" href="{{ .Permalink }}">
-
