--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,12 +2,20 @@
 
   <div class="sections sidebar">
     <section class="sidebar">
-      <header>ABOUT</header>
+      <header>AUTHOR</header>
       <div>
         <div class="articles sm">
-          {{ range first 1 .Site.Pages.ByDate }}
-          {{ .Render "li_sm" }}
-          {{ end }}
+          <article class="lism">
+            <div class="thumb thumb-icon"></div>
+            <div class="inner">
+              <div class="title">{{ .Site.Params.author}}</div>
+              <div class="text">{{ .Site.Params.profile}}</div>
+              <ul class="facts sm">
+                <li><i class="fa fa-github" aria-hidden="true"></i><a href="{{ .Site.Params.github }}" target= _blank>GitHub</a></li>
+                <li><i class="fa fa-google-plus" aria-hidden="true"><a href="{{ .Site.Params.googleplus }}" target= _blank></i>Google+</a></li>
+              </ul>
+            </div>
+          </article>
         </div>
       </div>
     </section>
@@ -37,6 +45,6 @@
     {{ end }}
   </div>
 
-  <div class="p7button" data-align="right" data-button-text="通知を受け取る"></div>
+  <div class="p7button" data-button-text="通知を受け取る"></div>
 
 </aside>
