--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,7 +6,7 @@
       <div>
         <div class="articles sm">
           <article class="lism">
-            <div class="thumb thumb-icon"></div>
+            <div class="thumb thumb-author"></div>
             <div class="inner">
               <div class="title">{{ .Site.Params.author}}</div>
               <div class="text">{{ .Site.Params.profile}}</div>
