--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
   color: #333;
-  font-family: 'Roboto','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro',メイリオ,Meiryo,sans-serif;
+  font-family: 'Roboto','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo',sans-serif;
   font-feature-settings : "palt";
   font-size: inherit;
   line-height: 1rem;
