--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -1,6 +1,7 @@
 html {
   font-size: 18px;
   background-color: #f5f5f5;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
@@ -17,6 +18,7 @@ body {
   line-height: 1rem;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5 ,h6 {
@@ -75,7 +77,10 @@ aside {
   display: block;
 }
 
-main { padding: 1rem 0 3rem 0; }
+main {
+  padding: 1rem 0 3rem 0;
+  min-height: 80%;
+}
 aside.h { padding: 3rem 0; }
 
 main.f,
@@ -100,16 +105,17 @@ aside.f {
   background-color: #2196F3;
   box-shadow: 0 2px 5px rgba(0,0,0,0.30), 0 0px 5px rgba(0,0,0,0.20);
   padding: 2rem 0;
-  text-align: center;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .l-footer {
   background-color: #2196F3;
   box-shadow: 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px rgba(63,63,68,.1), 0 1px 2px rgba(0,0,0,.05);
-  font-size: .6rem;
-  font-weight: 400;
   padding: 1rem 0;
+  text-align: center;
+  position: absolute;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -140,21 +146,17 @@ aside.f {
   }
 }
 
-.logo {
-  margin-bottom: .5rem;
-}
-
 .logo a {
   font-size: 1.6rem;
-  line-height: 1.6rem;
   font-weight: 400;
+  line-height: 2rem;
   color: #fff;
 }
 
 .subtitle a {
   font-size: 1.0rem;
-  line-height: 1.0rem;
   font-weight: 400;
+  line-height: 1.5rem;
   color: rgba(255,255,255,0.5);
 }
 
