--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -42,7 +42,6 @@ p {
 a {
   color: #2196f3;
   text-decoration: none;
-  transition-duration: .3s;
 }
 
 ul, ol {
@@ -520,6 +519,11 @@ section.footer > header a {
   margin: .25rem;
   padding: 0 .75rem;
   line-height: 1.75rem;
+}
+
+.terms a:hover {
+  background-color: #f3999d;
+  transition-duration: 1s;
 }
 
 .pagination {
