--- a/layouts/partials/styles.css
+++ b/layouts/partials/styles.css
@@ -523,7 +523,6 @@ section.footer > header a {
 
 .terms a:hover {
   background-color: #f3999d;
-  transition-duration: 1s;
 }
 
 .pagination {
@@ -716,14 +715,70 @@ section.footer > header a {
   font-weight: 500;
 }
 
-.thumb {
-  background-image: url({{ .Site.BaseURL }}images/default.png);
+.author {
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+  padding: 1rem;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.author .author-thumb {
+  box-shadow: 0 2px 5px rgba(0,0,0,0.20);
+  margin: 0 auto .8rem;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  background-color: #eceff1;
   background-size: cover;
   background-position: center;
 }
 
-.thumb-author {
-  background-image: url({{ $.Site.BaseURL }}images/icon.png);
+.author .author-name {
+  margin-bottom: .8rem;
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #555;
+}
+
+.author .author-facts {
+  margin-bottom: 1rem;
+}
+
+.author .author-facts li {
+  display: inline;
+}
+
+.author .author-facts li a {
+  display: inline-block;
+  background-color: #eceff1;
+  width: 1.75rem;
+  height: 1.75rem;
+  line-height: 1.75rem;
+  text-align: center;
+  color: #333;
+  font-size: .8rem;
+  border-radius: 2px;
+}
+
+.author .author-facts li a:hover {
+  color: #fff;
+  background-color: #ee6e73;
+}
+
+.author .author-description {
+  text-align: center;
+  font-size: .8rem;
+}
+
+.author .author-description p {
+  margin: .5rem 0;
+}
+
+.thumb {
+  background-image: url({{ .Site.BaseURL }}images/default.png);
+  background-size: cover;
+  background-position: center;
 }
 
 {{ range $p := .Site.Pages }}
