devide sidebar code

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,32 +1,10 @@
 <aside class="l-sidebar">
 
   <div class="sections sidebar">
-
     {{ partial "author.html" . }}
-
-    <section class="sidebar">
-      <header>LATESTS</header>
-      <div>
-        <div class="articles sm">
-          {{ range $i, $p := (first 5 .Site.Pages) }}
-          {{ .Render "li_sm" }}
-          {{ end }}
-        </div>
-      </div>
-    </section>
-
-    {{ range $key, $value := .Site.Taxonomies }}
-    <section class="sidebar">
-      <header>
-        <a href="{{ $.Site.BaseURL }}{{ $key | urlize }}/">{{ $key | upper }}</a>
-      </header>
-      <div>
-        <ul class="terms">
-          {{ range first 10 $value.ByCount }}<li><a href="{{ $.Site.BaseURL}}{{ $key }}/{{ .Name | urlize }}">{{ .Name }}</a></li>{{ end }}
-        </ul>
-      </div>
-    </section>
-    {{ end }}
+    {{ partial "latests.html" . }}
+    {{ partial "categories.html" . }}
+    {{ partial "tags.html" . }}
   </div>
 
   <div class="p7button" data-button-text="購読する"></div>
