--- a/layouts/partials/single_json_ld.html
+++ b/layouts/partials/single_json_ld.html
@@ -17,7 +17,7 @@
     "dateModified": "{{ .Lastmod.Format "2006-01-02T15:04:05JST" }}",
     "author": {
       "@type": "Person",
-      "name": "{{ .Site.Params.author }}"
+      "name": "{{ .Site.Params.author.name }}"
     },
     "publisher": {
       "@type": "Organization",
