add taxonomy link

--- a/layouts/partials/taxonomy.html
+++ b/layouts/partials/taxonomy.html
@@ -1,5 +1,5 @@
 <section class="sidebar">
-  <header>{{ .key | upper }}</header>
+  <header><a href="{{ $.baseurl}}{{ $.key }}">{{ .key | upper }}</a></header>
   <div>
     <ul class="terms">
       {{ range first 10 .value.ByCount }}<li><a href="{{ $.baseurl}}{{ $.key }}/{{ .Name | urlize }}">{{ .Name }}</a></li>{{ end }}
