--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -47,7 +47,7 @@
           <ol>
             <li><a href="{{ .Site.BaseURL }}"><i class="fa fa-home" aria-hidden="true"></i>TOP</a></li>
             {{ with .Section }}
-            <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/" itemprop="url"><span itemprop="title">{{ . | upper }}</span></a></li>
+            <li><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/" itemprop="url"><span itemprop="title">{{ . | upper }}</span></a></li>
             {{ end }}
             <li class="active">{{ .Title }}</li>
           </ol>
